@@ -26,6 +26,9 @@
  */
 package hoot.services.controllers.osm;
 
+import static hoot.services.models.db.QFolderMapMappings.folderMapMappings;
+import static hoot.services.models.db.QFolders.folders;
+
 import java.io.File;
 import java.io.StringWriter;
 import java.io.Writer;
@@ -34,6 +37,7 @@ import java.sql.Connection;
 import java.sql.SQLException;
 import java.sql.Timestamp;
 import java.text.SimpleDateFormat;
+import java.util.ArrayList;
 import java.util.Calendar;
 import java.util.Date;
 import java.util.List;
@@ -47,11 +51,13 @@ import javax.ws.rs.POST;
 import javax.ws.rs.Path;
 import javax.ws.rs.Produces;
 import javax.ws.rs.QueryParam;
+import javax.ws.rs.WebApplicationException;
 import javax.ws.rs.core.MediaType;
 import javax.ws.rs.core.Response;
 import javax.ws.rs.core.Response.Status;
 import javax.xml.parsers.DocumentBuilder;
 import javax.xml.parsers.DocumentBuilderFactory;
+import javax.xml.parsers.ParserConfigurationException;
 import javax.xml.transform.OutputKeys;
 import javax.xml.transform.Transformer;
 import javax.xml.transform.TransformerFactory;
@@ -68,35 +74,30 @@ import org.slf4j.LoggerFactory;
 import org.w3c.dom.Document;
 import org.w3c.dom.Element;
 
-import com.mysema.query.Tuple;
-import com.mysema.query.sql.Configuration;
-import com.mysema.query.sql.SQLQuery;
-import com.mysema.query.sql.SQLSubQuery;
-import com.mysema.query.sql.dml.SQLDeleteClause;
-import com.mysema.query.sql.dml.SQLInsertClause;
-import com.mysema.query.sql.dml.SQLUpdateClause;
-import com.mysema.query.types.expr.NumberExpression;
-import com.mysema.query.types.template.NumberTemplate;
+import com.querydsl.core.Tuple;
+import com.querydsl.core.types.dsl.Expressions;
+import com.querydsl.sql.Configuration;
+import com.querydsl.sql.SQLQuery;
+import com.querydsl.sql.dml.SQLDeleteClause;
+import com.querydsl.sql.dml.SQLInsertClause;
+import com.querydsl.sql.dml.SQLUpdateClause;
 
-import hoot.services.db.DbUtils;
-import hoot.services.db2.FolderMapMappings;
-import hoot.services.db2.Folders;
-import hoot.services.db2.Maps;
-import hoot.services.db2.QFolderMapMappings;
-import hoot.services.db2.QFolders;
-import hoot.services.db2.QMaps;
 import hoot.services.geo.BoundingBox;
 import hoot.services.job.JobExecutioner;
 import hoot.services.job.JobStatusManager;
-import hoot.services.models.dataset.FolderRecords;
-import hoot.services.models.dataset.LinkRecords;
+import hoot.services.models.db.FolderMapMappings;
+import hoot.services.models.db.Folders;
+import hoot.services.models.db.Maps;
+import hoot.services.models.db.QMaps;
+import hoot.services.models.db.QUsers;
+import hoot.services.models.db.Users;
 import hoot.services.models.osm.Element.ElementType;
+import hoot.services.models.osm.ElementFactory;
 import hoot.services.models.osm.Map;
 import hoot.services.models.osm.MapLayers;
 import hoot.services.models.osm.ModelDaoUtils;
-import hoot.services.utils.ResourceErrorHandler;
+import hoot.services.utils.DbUtils;
 import hoot.services.utils.XmlDocumentBuilder;
-import hoot.services.writers.osm.MapQueryResponseWriter;
 
 
 /**
@@ -117,30 +118,26 @@ public class MapResource {
      * GET hoot-services/osm/api/0.6/map/layers
      *
      * @return a JSON object containing a list of map layers
-     * @throws Exception
      */
     @GET
     @Path("/layers")
     @Consumes(MediaType.TEXT_PLAIN)
     @Produces(MediaType.APPLICATION_JSON)
-    public MapLayers getLayers() throws Exception {
-        Connection conn = DbUtils.createConnection();
+    public MapLayers getLayers() {
         MapLayers mapLayers = null;
-        try {
+        try (Connection conn = DbUtils.createConnection()) {
             logger.info("Retrieving map layers list...");
 
-            logger.debug("Initializing database connection...");
+            List<Maps> mapLayerRecords = new SQLQuery<>(conn, DbUtils.getConfiguration())
+                    .select(maps)
+                    .from(maps)
+                    .orderBy(maps.displayName.asc())
+                    .fetch();
 
-            SQLQuery query = new SQLQuery(conn, DbUtils.getConfiguration());
-
-            List<Maps> mapLayerRecords = query.from(maps).orderBy(maps.displayName.asc()).list(maps);
             mapLayers = Map.mapLayerRecordsToLayers(mapLayerRecords);
         }
         catch (Exception e) {
             handleError(e, null, null);
-        }
-        finally {
-            DbUtils.closeConnection(conn);
         }
 
         String message = "Returning map layers response";
@@ -149,6 +146,7 @@ public class MapResource {
         }
 
         logger.debug(message);
+
         return mapLayers;
     }
 
@@ -165,33 +163,26 @@ public class MapResource {
      * Returns a list of all folders in the services database
      *
      * @return a JSON object containing a list of folders
-     * @throws Exception
      */
-
     @GET
     @Path("/folders")
     @Consumes(MediaType.TEXT_PLAIN)
     @Produces(MediaType.APPLICATION_JSON)
-    public FolderRecords getFolders() throws Exception {
-        Connection conn = DbUtils.createConnection();
+    public FolderRecords getFolders() {
         FolderRecords folderRecords = null;
-        try {
+        try (Connection conn = DbUtils.createConnection()) {
             logger.info("Retrieving folders list...");
 
-            logger.debug("Initializing database connection...");
+            List<Folders> folderRecordSet = new SQLQuery<>(conn, DbUtils.getConfiguration())
+                    .select(folders)
+                    .from(folders)
+                    .orderBy(folders.displayName.asc())
+                    .fetch();
 
-            QFolders folders = QFolders.folders;
-            SQLQuery query = new SQLQuery(conn, DbUtils.getConfiguration());
-
-            List<Folders> folderRecordSet = query.from(folders).orderBy(folders.displayName.asc()).list(folders);
-
-            folderRecords = Map.mapFolderRecordsToFolders(folderRecordSet);
+            folderRecords = mapFolderRecordsToFolders(folderRecordSet);
         }
         catch (Exception e) {
             handleError(e, null, null);
-        }
-        finally {
-            DbUtils.closeConnection(conn);
         }
 
         String message = "Returning map layers response";
@@ -210,52 +201,51 @@ public class MapResource {
      * GET hoot-services/osm/api/0.6/map/links
      *
      * @return a JSON object containing a list of folders
-     * @throws Exception
      */
     @GET
     @Path("/links")
     @Consumes(MediaType.TEXT_PLAIN)
     @Produces(MediaType.APPLICATION_JSON)
-    public LinkRecords getLinks() throws Exception {
-        Connection conn = DbUtils.createConnection();
+    public LinkRecords getLinks() {
         Configuration configuration = DbUtils.getConfiguration();
         LinkRecords linkRecords = null;
-        try {
+
+        try (Connection conn = DbUtils.createConnection()) {
             logger.info("Retrieving links list...");
 
-            logger.debug("Initializing database connection...");
-
-            QFolderMapMappings folderMapMappings = QFolderMapMappings.folderMapMappings;
-            SQLQuery query = new SQLQuery(conn, DbUtils.getConfiguration());
-
-            new SQLDeleteClause(conn, configuration, folderMapMappings).where(
-                    new SQLSubQuery().from(maps).where(folderMapMappings.mapId.eq(maps.id)).notExists()).execute();
+            new SQLDeleteClause(conn, configuration, folderMapMappings)
+                    .where(new SQLQuery<>()
+                            .from(maps)
+                            .where(folderMapMappings.mapId.eq(maps.id))
+                            .notExists())
+                    .execute();
 
             try {
-                SQLInsertClause insertMissing = new SQLInsertClause(conn, configuration, folderMapMappings).columns(
-                        folderMapMappings.mapId, folderMapMappings.folderId).select(
-                        new SQLSubQuery()
+                new SQLInsertClause(conn, configuration, folderMapMappings)
+                        .columns(folderMapMappings.mapId, folderMapMappings.folderId)
+                        .select(new SQLQuery<>()
+                                .select(maps.id, Expressions.numberTemplate(Long.class, "0"))
                                 .from(maps)
-                                .where(maps.id.notIn(new SQLSubQuery().distinct().from(folderMapMappings)
-                                        .list(folderMapMappings.mapId)))
-                                .list(maps.id, NumberTemplate.create(Long.class, "0")));
-
-                insertMissing.execute();
+                                .where(maps.id.notIn(new SQLQuery<>()
+                                        .select(folderMapMappings.mapId)
+                                        .distinct()
+                                        .from(folderMapMappings))))
+                        .execute();
             }
             catch (Exception e) {
-                logger.error("Could not add missing records...");
+                logger.error("Could not add missing records...", e);
             }
 
-            List<FolderMapMappings> linkRecordSet =
-                    query.from(folderMapMappings).orderBy(folderMapMappings.folderId.asc()).list(folderMapMappings);
+            List<FolderMapMappings> linkRecordSet = new SQLQuery<>(conn, configuration)
+                    .select(folderMapMappings)
+                    .from(folderMapMappings)
+                    .orderBy(folderMapMappings.folderId.asc())
+                    .fetch();
 
-            linkRecords = Map.mapLinkRecordsToLinks(linkRecordSet);
+            linkRecords = mapLinkRecordsToLinks(linkRecordSet);
         }
         catch (Exception e) {
             handleError(e, null, null);
-        }
-        finally {
-            DbUtils.closeConnection(conn);
         }
 
         String message = "Returning links response";
@@ -264,125 +254,129 @@ public class MapResource {
         return linkRecords;
     }
 
-    private static Document _generateExtentOSM(String maxlon, String maxlat, String minlon, String minlat)
-            throws Exception {
+    private static Document generateExtentOSM(String maxlon, String maxlat, String minlon, String minlat) {
         SimpleDateFormat sdfDate = new SimpleDateFormat("yyyy-MM-dd'T'HH:mm:ss'Z'");
         Date now = new Date();
         String strDate = sdfDate.format(now);
 
-        DocumentBuilderFactory dbf = XmlDocumentBuilder.getSecureDocBuilderFactory();
-        dbf.setValidating(false);
-        DocumentBuilder db = dbf.newDocumentBuilder();
-        Document doc = db.newDocument();
+        try {
+            DocumentBuilderFactory dbf = XmlDocumentBuilder.getSecureDocBuilderFactory();
+            dbf.setValidating(false);
+            DocumentBuilder db = dbf.newDocumentBuilder();
+            Document doc = db.newDocument();
 
-        Element osmElem = doc.createElement("osm");
-        osmElem.setAttribute("version", "0.6");
-        osmElem.setAttribute("generator", "hootenanny");
-        doc.appendChild(osmElem);
+            Element osmElem = doc.createElement("osm");
+            osmElem.setAttribute("version", "0.6");
+            osmElem.setAttribute("generator", "hootenanny");
+            doc.appendChild(osmElem);
 
-        Element boundsElem = doc.createElement("bounds");
-        boundsElem.setAttribute("minlat", minlat);
-        boundsElem.setAttribute("minlon", minlon);
-        boundsElem.setAttribute("maxlat", maxlat);
-        boundsElem.setAttribute("maxlon", maxlon);
-        osmElem.appendChild(boundsElem);
+            Element boundsElem = doc.createElement("bounds");
+            boundsElem.setAttribute("minlat", minlat);
+            boundsElem.setAttribute("minlon", minlon);
+            boundsElem.setAttribute("maxlat", maxlat);
+            boundsElem.setAttribute("maxlon", maxlon);
+            osmElem.appendChild(boundsElem);
 
-        // The ID's for these fabricated nodes were stepping on the ID's of actual nodes, so their ID's need to be
-        // made negative and large, so they have no chance of stepping on anything.
+            // The ID's for these fabricated nodes were stepping on the ID's of actual nodes, so their ID's need to be
+            // made negative and large, so they have no chance of stepping on anything.
 
-        long node1Id = Long.MIN_VALUE + 3;
-        long node2Id = Long.MIN_VALUE + 2;
-        long node3Id = Long.MIN_VALUE + 1;
-        long node4Id = Long.MIN_VALUE;
+            long node1Id = Long.MIN_VALUE + 3;
+            long node2Id = Long.MIN_VALUE + 2;
+            long node3Id = Long.MIN_VALUE + 1;
+            long node4Id = Long.MIN_VALUE;
 
-        Element nodeElem = doc.createElement("node");
-        nodeElem.setAttribute("id", String.valueOf(node1Id));
-        nodeElem.setAttribute("timestamp", strDate);
-        nodeElem.setAttribute("user", "hootenannyuser");
-        nodeElem.setAttribute("visible", "true");
-        nodeElem.setAttribute("version", "1");
-        nodeElem.setAttribute("lat", maxlat);
-        nodeElem.setAttribute("lon", minlon);
-        osmElem.appendChild(nodeElem);
+            Element nodeElem = doc.createElement("node");
+            nodeElem.setAttribute("id", String.valueOf(node1Id));
+            nodeElem.setAttribute("timestamp", strDate);
+            nodeElem.setAttribute("user", "hootenannyuser");
+            nodeElem.setAttribute("visible", "true");
+            nodeElem.setAttribute("version", "1");
+            nodeElem.setAttribute("lat", maxlat);
+            nodeElem.setAttribute("lon", minlon);
+            osmElem.appendChild(nodeElem);
 
-        nodeElem = doc.createElement("node");
-        nodeElem.setAttribute("id", String.valueOf(node2Id));
-        nodeElem.setAttribute("timestamp", strDate);
-        nodeElem.setAttribute("user", "hootenannyuser");
-        nodeElem.setAttribute("visible", "true");
-        nodeElem.setAttribute("version", "1");
-        nodeElem.setAttribute("lat", maxlat);
-        nodeElem.setAttribute("lon", maxlon);
-        osmElem.appendChild(nodeElem);
+            nodeElem = doc.createElement("node");
+            nodeElem.setAttribute("id", String.valueOf(node2Id));
+            nodeElem.setAttribute("timestamp", strDate);
+            nodeElem.setAttribute("user", "hootenannyuser");
+            nodeElem.setAttribute("visible", "true");
+            nodeElem.setAttribute("version", "1");
+            nodeElem.setAttribute("lat", maxlat);
+            nodeElem.setAttribute("lon", maxlon);
+            osmElem.appendChild(nodeElem);
 
-        nodeElem = doc.createElement("node");
-        nodeElem.setAttribute("id", String.valueOf(node3Id));
-        nodeElem.setAttribute("timestamp", strDate);
-        nodeElem.setAttribute("user", "hootenannyuser");
-        nodeElem.setAttribute("visible", "true");
-        nodeElem.setAttribute("version", "1");
-        nodeElem.setAttribute("lat", minlat);
-        nodeElem.setAttribute("lon", maxlon);
-        osmElem.appendChild(nodeElem);
+            nodeElem = doc.createElement("node");
+            nodeElem.setAttribute("id", String.valueOf(node3Id));
+            nodeElem.setAttribute("timestamp", strDate);
+            nodeElem.setAttribute("user", "hootenannyuser");
+            nodeElem.setAttribute("visible", "true");
+            nodeElem.setAttribute("version", "1");
+            nodeElem.setAttribute("lat", minlat);
+            nodeElem.setAttribute("lon", maxlon);
+            osmElem.appendChild(nodeElem);
 
-        nodeElem = doc.createElement("node");
-        nodeElem.setAttribute("id", String.valueOf(node4Id));
-        nodeElem.setAttribute("timestamp", strDate);
-        nodeElem.setAttribute("user", "hootenannyuser");
-        nodeElem.setAttribute("visible", "true");
-        nodeElem.setAttribute("version", "1");
-        nodeElem.setAttribute("lat", minlat);
-        nodeElem.setAttribute("lon", minlon);
-        osmElem.appendChild(nodeElem);
+            nodeElem = doc.createElement("node");
+            nodeElem.setAttribute("id", String.valueOf(node4Id));
+            nodeElem.setAttribute("timestamp", strDate);
+            nodeElem.setAttribute("user", "hootenannyuser");
+            nodeElem.setAttribute("visible", "true");
+            nodeElem.setAttribute("version", "1");
+            nodeElem.setAttribute("lat", minlat);
+            nodeElem.setAttribute("lon", minlon);
+            osmElem.appendChild(nodeElem);
 
-        Element wayElem = doc.createElement("way");
-        wayElem.setAttribute("id", String.valueOf(Long.MIN_VALUE));
-        wayElem.setAttribute("timestamp", strDate);
-        wayElem.setAttribute("user", "hootenannyuser");
-        wayElem.setAttribute("visible", "true");
-        wayElem.setAttribute("version", "1");
+            Element wayElem = doc.createElement("way");
+            wayElem.setAttribute("id", String.valueOf(Long.MIN_VALUE));
+            wayElem.setAttribute("timestamp", strDate);
+            wayElem.setAttribute("user", "hootenannyuser");
+            wayElem.setAttribute("visible", "true");
+            wayElem.setAttribute("version", "1");
 
-        Element ndElem = doc.createElement("nd");
-        ndElem.setAttribute("ref", String.valueOf(node1Id));
-        wayElem.appendChild(ndElem);
+            Element ndElem = doc.createElement("nd");
+            ndElem.setAttribute("ref", String.valueOf(node1Id));
+            wayElem.appendChild(ndElem);
 
-        ndElem = doc.createElement("nd");
-        ndElem.setAttribute("ref", String.valueOf(node2Id));
-        wayElem.appendChild(ndElem);
+            ndElem = doc.createElement("nd");
+            ndElem.setAttribute("ref", String.valueOf(node2Id));
+            wayElem.appendChild(ndElem);
 
-        ndElem = doc.createElement("nd");
-        ndElem.setAttribute("ref", String.valueOf(node3Id));
-        wayElem.appendChild(ndElem);
+            ndElem = doc.createElement("nd");
+            ndElem.setAttribute("ref", String.valueOf(node3Id));
+            wayElem.appendChild(ndElem);
 
-        ndElem = doc.createElement("nd");
-        ndElem.setAttribute("ref", String.valueOf(node4Id));
-        wayElem.appendChild(ndElem);
+            ndElem = doc.createElement("nd");
+            ndElem.setAttribute("ref", String.valueOf(node4Id));
+            wayElem.appendChild(ndElem);
 
-        ndElem = doc.createElement("nd");
-        ndElem.setAttribute("ref", String.valueOf(node1Id));
-        wayElem.appendChild(ndElem);
+            ndElem = doc.createElement("nd");
+            ndElem.setAttribute("ref", String.valueOf(node1Id));
+            wayElem.appendChild(ndElem);
 
         /*
          * ndElem = doc.createElement("tag"); ndElem.setAttribute("k", "area");
          * ndElem.setAttribute("v", "yes"); wayElem.appendChild(ndElem);
          */
 
-        osmElem.appendChild(wayElem);
+            osmElem.appendChild(wayElem);
 
-        Transformer tf = TransformerFactory.newInstance().newTransformer();
+            Transformer tf = TransformerFactory.newInstance().newTransformer();
 
-        // Fortify may require this, but it doesn't work.
-        // TransformerFactory transformerFactory =
-        // XmlDocumentBuilder.getSecureTransformerFactory();
-        tf.setOutputProperty(OutputKeys.ENCODING, "UTF-8");
-        tf.setOutputProperty(OutputKeys.INDENT, "yes");
+            // Fortify may require this, but it doesn't work.
+            // TransformerFactory transformerFactory =
+            // XmlDocumentBuilder.getSecureTransformerFactory();
+            tf.setOutputProperty(OutputKeys.ENCODING, "UTF-8");
+            tf.setOutputProperty(OutputKeys.INDENT, "yes");
 
-        try (Writer out = new StringWriter()) {
-            tf.transform(new DOMSource(doc), new StreamResult(out));
-            logger.debug("Layer Extent OSM: {}", out);
+            try (Writer out = new StringWriter()) {
+                tf.transform(new DOMSource(doc), new StreamResult(out));
+                logger.debug("Layer Extent OSM: {}", out);
+            }
+
+            return doc;
         }
-
-        return doc;
+        catch (Exception e) {
+            throw new RuntimeException("Error generating OSM extent", e);
+        }
     }
 
     /**
@@ -399,7 +393,6 @@ public class MapResource {
      *            activated is not compatible with standard OSM clients
      *            (specific to Hootenanny iD); defaults to false
      * @return response containing the data of the requested elements
-     * @throws Exception
      */
     @GET
     @Consumes(MediaType.TEXT_PLAIN)
@@ -408,25 +401,23 @@ public class MapResource {
                         @QueryParam("bbox") String BBox,
                         @QueryParam("extent") String extent,
                         @QueryParam("autoextent") String auto,
-                        @DefaultValue("false") @QueryParam("multiLayerUniqueElementIds") boolean multiLayerUniqueElementIds)
-    throws Exception {
-        Connection conn = DbUtils.createConnection();
+                        @DefaultValue("false") @QueryParam("multiLayerUniqueElementIds") boolean multiLayerUniqueElementIds) {
         Document responseDoc = null;
-        try {
+        try (Connection conn = DbUtils.createConnection()) {
             logger.info("Retrieving map data for map with ID: {} and bounds {} ...", mapId, BBox);
 
             long mapIdNum = -2;
             try {
                 mapIdNum = Long.parseLong(mapId);
             }
-            catch (NumberFormatException e) {
+            catch (NumberFormatException ignored) {
                 //
             }
             if (mapIdNum == -1)
             {
                 // OSM API database data can't be displayed on a hoot map, due to differences
                 // between the display code, so we return no data here.
-                responseDoc = MapQueryResponseWriter.writeEmptyResponse();
+                responseDoc = writeEmptyResponse();
             }
             else {
                 String bbox = BBox;
@@ -442,33 +433,31 @@ public class MapResource {
                     double maxX = Double.parseDouble(sMaxX);
                     double maxY = Double.parseDouble(sMaxY);
 
-                    minX = minX > 180 ? 180 : minX;
-                    minX = minX < -180 ? -180 : minX;
+                    minX = (minX > 180) ? 180 : minX;
+                    minX = (minX < -180) ? -180 : minX;
 
-                    maxX = maxX > 180 ? 180 : maxX;
-                    maxX = maxX < -180 ? -180 : maxX;
+                    maxX = (maxX > 180) ? 180 : maxX;
+                    maxX = (maxX < -180) ? -180 : maxX;
 
-                    minY = minY > 90 ? 90 : minY;
-                    minY = minY < -90 ? -90 : minY;
+                    minY = (minY > 90) ? 90 : minY;
+                    minY = (minY < -90) ? -90 : minY;
 
-                    maxY = maxY > 90 ? 90 : maxY;
-                    maxY = maxY < -90 ? -90 : maxY;
+                    maxY = (maxY > 90) ? 90 : maxY;
+                    maxY = (maxY < -90) ? -90 : maxY;
 
-                    bbox = "" + minX + "," + minY + "," + maxX + "," + maxY;
+                    bbox = minX + "," + minY + "," + maxX + "," + maxY;
                 }
 
-                QMaps maps = QMaps.maps;
                 mapIdNum = ModelDaoUtils.getRecordIdForInputString(mapId, conn, maps, maps.id, maps.displayName);
-                assert (mapIdNum != -1);
 
-                BoundingBox queryBounds = null;
+                BoundingBox queryBounds;
                 try {
                     queryBounds = new BoundingBox(bbox);
                     logger.debug("Query bounds area: {}", queryBounds.getArea());
                 }
                 catch (Exception e) {
-                    throw new Exception("Error parsing bounding box from bbox param: " + bbox + " (" + e.getMessage()
-                            + ")");
+                    throw new RuntimeException("Error parsing bounding box from bbox param: " +
+                            bbox + " (" + e.getMessage() + ")", e);
                 }
 
                 boolean doDefault = true;
@@ -481,7 +470,7 @@ public class MapResource {
                                 String maxlat = coords[1].trim();
                                 String minlon = coords[2].trim();
                                 String minlat = coords[3].trim();
-                                responseDoc = _generateExtentOSM(maxlon, maxlat, minlon, minlat);
+                                responseDoc = generateExtentOSM(maxlon, maxlat, minlon, minlat);
                                 doDefault = false;
                             }
                         }
@@ -490,22 +479,18 @@ public class MapResource {
                 }
 
                 if (doDefault) {
-                    final java.util.Map<ElementType, java.util.Map<Long, Tuple>> results = (new Map(mapIdNum, conn))
+                    java.util.Map<ElementType, java.util.Map<Long, Tuple>> results = (new Map(mapIdNum, conn))
                             .query(queryBounds);
 
-                    responseDoc = (new MapQueryResponseWriter(mapIdNum, conn)).writeResponse(results, queryBounds,
-                            multiLayerUniqueElementIds);
+                    responseDoc = writeResponse(results, queryBounds, multiLayerUniqueElementIds, mapIdNum, conn);
                 }
             }
         }
         catch (Exception e) {
             handleError(e, mapId, BBox);
         }
-        finally {
-            DbUtils.closeConnection(conn);
-        }
 
-        return Response.ok(new DOMSource(responseDoc), MediaType.TEXT_XML).header("Content-type", MediaType.TEXT_XML)
+        return Response.ok(new DOMSource(responseDoc))
                 .header("Content-Disposition", "attachment; filename=\"map.osm\"").build();
     }
 
@@ -513,16 +498,15 @@ public class MapResource {
     @Path("/nodescount")
     @Consumes(MediaType.TEXT_PLAIN)
     @Produces(MediaType.APPLICATION_JSON)
-    public Response getTileNodesCounts(String params) throws Exception {
-        Connection conn = DbUtils.createConnection();
+    public Response getTileNodesCounts(String params) {
         JSONObject ret = new JSONObject();
         String mapId = "";
         String bbox = "";
-        long nodeCnt = 0;
-        try {
+        try (Connection conn = DbUtils.createConnection()) {
             JSONParser parser = new JSONParser();
             JSONArray paramsArray = (JSONArray) parser.parse(params);
 
+            long nodeCnt = 0;
             for (Object aParamsArray : paramsArray) {
                 JSONObject param = (JSONObject) aParamsArray;
                 mapId = (String) param.get("mapId");
@@ -530,13 +514,13 @@ public class MapResource {
                 try {
                     mapIdNum = Long.parseLong(mapId);
                 }
-                catch (NumberFormatException e) {
+                catch (NumberFormatException ignored) {
                     //
                 }
                 // OSM API database data can't be displayed on a hoot map, due to differences
                 // between the display code, so we return a zero count if its that layer.
                 if (mapIdNum != -1) {
-                    logger.info("Retrieving node count for map with ID: " + mapId + " ...");
+                    logger.info("Retrieving node count for map with ID: {} ...", mapId);
                     bbox = (String) param.get("tile");
                     String[] coords = bbox.split(",");
                     if (coords.length == 4) {
@@ -550,33 +534,31 @@ public class MapResource {
                         double maxX = Double.parseDouble(sMaxX);
                         double maxY = Double.parseDouble(sMaxY);
 
-                        minX = minX > 180 ? 180 : minX;
-                        minX = minX < -180 ? -180 : minX;
+                        minX = (minX > 180) ? 180 : minX;
+                        minX = (minX < -180) ? -180 : minX;
 
-                        maxX = maxX > 180 ? 180 : maxX;
-                        maxX = maxX < -180 ? -180 : maxX;
+                        maxX = (maxX > 180) ? 180 : maxX;
+                        maxX = (maxX < -180) ? -180 : maxX;
 
-                        minY = minY > 90 ? 90 : minY;
-                        minY = minY < -90 ? -90 : minY;
+                        minY = (minY > 90) ? 90 : minY;
+                        minY = (minY < -90) ? -90 : minY;
 
-                        maxY = maxY > 90 ? 90 : maxY;
-                        maxY = maxY < -90 ? -90 : maxY;
+                        maxY = (maxY > 90) ? 90 : maxY;
+                        maxY = (maxY < -90) ? -90 : maxY;
 
-                        bbox = "" + minX + "," + minY + "," + maxX + "," + maxY;
+                        bbox = minX + "," + minY + "," + maxX + "," + maxY;
                     }
 
-                    QMaps maps = QMaps.maps;
                     mapIdNum = ModelDaoUtils.getRecordIdForInputString(mapId, conn, maps, maps.id, maps.displayName);
-                    assert (mapIdNum != -1);
 
-                    BoundingBox queryBounds = null;
+                    BoundingBox queryBounds;
                     try {
                         queryBounds = new BoundingBox(bbox);
-                        logger.debug("Query bounds area: " + queryBounds.getArea());
+                        logger.debug("Query bounds area: {}", queryBounds.getArea());
                     }
                     catch (Exception e) {
-                        throw new Exception("Error parsing bounding box from bbox param: " + bbox + " ("
-                                + e.getMessage() + ")");
+                        throw new RuntimeException("Error parsing bounding box from bbox param: " + bbox + " ("
+                                + e.getMessage() + ")", e);
                     }
                     Map currMap = new Map(mapIdNum, conn);
                     nodeCnt += currMap.getNodesCount(queryBounds);
@@ -588,28 +570,24 @@ public class MapResource {
         catch (Exception e) {
             handleError(e, mapId, bbox);
         }
-        finally {
-            DbUtils.closeConnection(conn);
-        }
 
-        return Response.ok(ret.toString(), MediaType.APPLICATION_JSON).build();
+        return Response.ok(ret.toString()).build();
     }
 
     @GET
     @Path("/mbr")
     @Consumes(MediaType.TEXT_PLAIN)
     @Produces(MediaType.APPLICATION_JSON)
-    public Response getMBR(@QueryParam("mapId") String mapId) throws Exception {
-        Connection conn = DbUtils.createConnection();
+    public Response getMBR(@QueryParam("mapId") String mapId) {
         JSONObject ret = new JSONObject();
-        try {
-            logger.info("Retrieving MBR for map with ID: " + mapId + " ...");
+        try (Connection conn = DbUtils.createConnection()) {
+            logger.info("Retrieving MBR for map with ID: {} ...", mapId);
 
             long mapIdNum = -2;
             try {
                 mapIdNum = Long.parseLong(mapId);
             }
-            catch (NumberFormatException e) {
+            catch (NumberFormatException ignored) {
                 //
             }
             if (mapIdNum == -1) // OSM API db
@@ -626,18 +604,16 @@ public class MapResource {
                 ret.put("nodescount", 0);
             }
             else {
-                QMaps maps = QMaps.maps;
                 mapIdNum = ModelDaoUtils.getRecordIdForInputString(mapId, conn, maps, maps.id, maps.displayName);
-                assert (mapIdNum != -1);
 
-                BoundingBox queryBounds = null;
+                BoundingBox queryBounds;
                 try {
                     queryBounds = new BoundingBox("-180,-90,180,90");
                     logger.debug("Query bounds area: {}", queryBounds.getArea());
                 }
                 catch (Exception e) {
-                    throw new Exception("Error parsing bounding box from bbox param: " + "-180,-90,180,90" + " ("
-                            + e.getMessage() + ")");
+                    throw new RuntimeException("Error parsing bounding box from bbox param: " + "-180,-90,180,90" + " ("
+                            + e.getMessage() + ")", e);
                 }
 
                 Map currMap = new Map(mapIdNum, conn);
@@ -671,11 +647,8 @@ public class MapResource {
         catch (Exception e) {
             handleError(e, mapId, "-180,-90,180,90");
         }
-        finally {
-            DbUtils.closeConnection(conn);
-        }
 
-        return Response.ok(ret.toString(), MediaType.APPLICATION_JSON).build();
+        return Response.ok(ret.toString()).build();
     }
 
     private static void handleError(Exception e, String mapId, String requestSnippet) {
@@ -685,29 +658,36 @@ public class MapResource {
             // debug rather than an error to make the logs cleaner.
             logger.debug(e.getMessage());
         }
-        else if (e.getMessage().startsWith("Multiple records exist") ||
-                 e.getMessage().startsWith("No record exists")) {
-            ResourceErrorHandler.handleError(e.getMessage().replaceAll("records", "maps").replaceAll("record", "map"),
-                    Status.NOT_FOUND, logger);
-        }
-        else if (e.getMessage().startsWith("Map is empty")) {
-            ResourceErrorHandler.handleError(e.getMessage(), Status.NOT_FOUND, logger);
-        }
-        else if (e.getMessage().startsWith("Error parsing bounding box from bbox param") ||
-                 e.getMessage().contains("The maximum bbox size is") ||
-                 e.getMessage().contains("The maximum number of nodes that may be returned in a map query")) {
-            ResourceErrorHandler.handleError(e.getMessage(), Status.BAD_REQUEST, logger);
+        else if (!StringUtils.isEmpty(e.getMessage())) {
+            if (e.getMessage().startsWith("Multiple records exist") ||
+                    e.getMessage().startsWith("No record exists")) {
+                String msg = e.getMessage().replaceAll("records", "maps").replaceAll("record", "map");
+                throw new WebApplicationException(e, Response.status(Status.NOT_FOUND).entity(msg).build());
+            }
+            else if (e.getMessage().startsWith("Map is empty")) {
+                String msg = e.getMessage();
+                throw new WebApplicationException(Response.status(Status.NOT_FOUND).entity(msg).build());
+            }
+            else if (e.getMessage().startsWith("Error parsing bounding box from bbox param") ||
+                    e.getMessage().contains("The maximum bbox size is") ||
+                    e.getMessage().contains("The maximum number of nodes that may be returned in a map query")) {
+                String msg = e.getMessage();
+                throw new WebApplicationException(e, Response.status(Status.BAD_REQUEST).entity(msg).build());
+            }
         }
         else {
             if (mapId != null) {
-                ResourceErrorHandler.handleError("Error querying map with ID: " + mapId + " - data: (" + e.getMessage()
-                        + ") " + requestSnippet, Status.INTERNAL_SERVER_ERROR, logger);
+                String msg = "Error querying map with ID: " + mapId + " - data: " + requestSnippet;
+                throw new WebApplicationException(e, Response.serverError().entity(msg).build());
             }
             else {
-                ResourceErrorHandler.handleError("Error listing layers for map - data: (" + e.getMessage() + ") "
-                        + requestSnippet, Status.INTERNAL_SERVER_ERROR, logger);
+                String msg = "Error listing layers for map - data: " + requestSnippet;
+                throw new WebApplicationException(e, Response.serverError().entity(msg).build());
             }
         }
+
+        String msg = e.getMessage();
+        throw new WebApplicationException(e, Response.serverError().entity(msg).build());
     }
 
     /**
@@ -720,13 +700,12 @@ public class MapResource {
      * @param mapId
      *            ID of map record to be deleted
      * @return id of the deleted map
-     * @throws Exception
      */
     @POST
     @Path("/delete")
     @Consumes(MediaType.TEXT_PLAIN)
-    @Produces(MediaType.TEXT_PLAIN)
-    public Response deleteLayers(@QueryParam("mapId") String mapId) throws Exception {
+    @Produces(MediaType.APPLICATION_JSON)
+    public Response deleteLayers(@QueryParam("mapId") String mapId) {
         JSONObject command = new JSONObject();
         command.put("mapId", mapId);
         command.put("execImpl", "ResourcesCleanUtil");
@@ -738,7 +717,7 @@ public class MapResource {
         JSONObject res = new JSONObject();
         res.put("jobId", jobId);
 
-        return Response.ok(res.toJSONString(), MediaType.APPLICATION_JSON).build();
+        return Response.ok(res.toJSONString()).build();
     }
 
     /**
@@ -751,57 +730,47 @@ public class MapResource {
      * 
      * @param mapId
      *            ID of map record or folder to be modified
-     * @param _modName
+     * @param modName
      *            The new name for the dataset
      * @param inputType
      *            Flag for either dataset or folder
      * @return jobId Success = True/False
-     * @throws Exception
      */
     @POST
     @Path("/modify")
     @Consumes(MediaType.TEXT_PLAIN)
-    @Produces(MediaType.TEXT_PLAIN)
+    @Produces(MediaType.APPLICATION_JSON)
     public Response modifyName(@QueryParam("mapId") String mapId,
-                               @QueryParam("modName") String _modName,
-                               @QueryParam("inputType") String inputType) throws Exception {
-        Long _mapId = Long.parseLong(mapId);
-        Connection conn = DbUtils.createConnection();
-        String _inputType = inputType.toLowerCase();
+                               @QueryParam("modName") String modName,
+                               @QueryParam("inputType") String inputType) {
+        try (Connection conn = DbUtils.createConnection()) {
+            Configuration configuration = DbUtils.getConfiguration();
 
-        try {
-            logger.debug("Initializing database connection...");
+            if (inputType.toLowerCase(Locale.ENGLISH).equals("dataset")) {
+                new SQLUpdateClause(conn, configuration, maps)
+                        .where(maps.id.eq(Long.valueOf(mapId)))
+                        .set(maps.displayName, modName)
+                        .execute();
 
-            if (_inputType.toLowerCase(Locale.ENGLISH).equals("dataset")) {
-                Configuration configuration = DbUtils.getConfiguration();
-
-                new SQLUpdateClause(conn, configuration, maps).where(maps.id.eq(_mapId))
-                        .set(maps.displayName, _modName).execute();
-
-                logger.debug("Renamed map with id {} {}...", mapId, _modName);
+                logger.debug("Renamed map with id {} {}...", mapId, modName);
             }
-            else if (_inputType.toLowerCase(Locale.ENGLISH).equals("folder")) {
-                QFolders folders = QFolders.folders;
-                Configuration configuration = DbUtils.getConfiguration();
+            else if (inputType.toLowerCase(Locale.ENGLISH).equals("folder")) {
+                new SQLUpdateClause(conn, configuration, folders)
+                        .where(folders.id.eq(Long.valueOf(mapId)))
+                        .set(folders.displayName, modName)
+                        .execute();
 
-                new SQLUpdateClause(conn, configuration, folders).where(folders.id.eq(_mapId))
-                        .set(folders.displayName, _modName).execute();
-
-                logger.debug("Renamed folder with id {} {}...", mapId, _modName);
+                logger.debug("Renamed folder with id {} {}...", mapId, modName);
             }
-
         }
         catch (Exception e) {
             handleError(e, null, null);
-        }
-        finally {
-            DbUtils.closeConnection(conn);
         }
 
         JSONObject res = new JSONObject();
         res.put("success", true);
 
-        return Response.ok(res.toJSONString(), MediaType.APPLICATION_JSON).build();
+        return Response.ok(res.toJSONString()).build();
     }
 
     /**
@@ -816,25 +785,22 @@ public class MapResource {
      *            The parent folder of the new folder. If at root level, is
      *            equal to 0.
      * @return jobId Success = True/False
-     * @throws Exception
      */
     @POST
     @Path("/addfolder")
     @Consumes(MediaType.TEXT_PLAIN)
-    @Produces(MediaType.TEXT_PLAIN)
+    @Produces(MediaType.APPLICATION_JSON)
     public Response addFolder(@QueryParam("folderName") String folderName,
-                              @QueryParam("parentId") String parentId) throws Exception {
-        Long _parentId = Long.parseLong(parentId);
+                              @QueryParam("parentId") Long parentId) {
         Long newId = -1L;
-        NumberExpression<Long> expression = NumberTemplate.create(Long.class, "nextval('folders_id_seq')");
-        Connection conn = DbUtils.createConnection();
 
-        QFolders folders = QFolders.folders;
-        Configuration configuration = DbUtils.getConfiguration();
-        SQLQuery query = new SQLQuery(conn, configuration);
+        try (Connection conn = DbUtils.createConnection()) {
+            Configuration configuration = DbUtils.getConfiguration();
 
-        try {
-            List<Long> ids = query.from().list(expression);
+            List<Long> ids = new SQLQuery<>(conn, configuration)
+                    .select(Expressions.numberTemplate(Long.class, "nextval('folders_id_seq')"))
+                    .from()
+                    .fetch();
 
             if ((ids != null) && (!ids.isEmpty())) {
                 newId = ids.get(0);
@@ -843,21 +809,20 @@ public class MapResource {
                 long userId = 1;
                 new SQLInsertClause(conn, configuration, folders)
                         .columns(folders.id, folders.createdAt, folders.displayName, folders.publicCol, folders.userId,
-                                folders.parentId).values(newId, now, folderName, true, userId, _parentId).execute();
+                                folders.parentId)
+                        .values(newId, now, folderName, true, userId, parentId)
+                        .execute();
             }
         }
         catch (Exception e) {
             handleError(e, null, null);
-        }
-        finally {
-            DbUtils.closeConnection(conn);
         }
 
         JSONObject res = new JSONObject();
         res.put("success", true);
         res.put("folderId", newId);
 
-        return Response.ok(res.toJSONString(), MediaType.APPLICATION_JSON).build();
+        return Response.ok(res.toJSONString()).build();
     }
 
     /**
@@ -870,51 +835,45 @@ public class MapResource {
      * @param folderId
      *            Folder Id
      * @return jobId
-     * @throws Exception
      */
     @POST
     @Path("/deletefolder")
     @Consumes(MediaType.TEXT_PLAIN)
-    @Produces(MediaType.TEXT_PLAIN)
-    public Response deleteFolder(@QueryParam("folderId") String folderId) throws Exception {
-        Long _folderId = Long.parseLong(folderId);
-        Connection conn = DbUtils.createConnection();
+    @Produces(MediaType.APPLICATION_JSON)
+    public Response deleteFolder(@QueryParam("folderId") Long folderId) {
+        try (Connection conn = DbUtils.createConnection()) {
+            Configuration configuration = DbUtils.getConfiguration();
 
-        QFolders folders = QFolders.folders;
-        QFolderMapMappings folderMapMappings = QFolderMapMappings.folderMapMappings;
-        Configuration configuration = DbUtils.getConfiguration();
+            List<Long> parentId = new SQLQuery<>(conn, configuration)
+                    .select(folders.id)
+                    .from(folders)
+                    .where(folders.id.eq(folderId))
+                    .fetch();
 
-        try {
-            SQLQuery query = new SQLQuery(conn, configuration);
-            List<Long> parentId = query.from(folders).where(folders.id.eq(_folderId)).list(folders.parentId);
+            Long prntId = !parentId.isEmpty() ? parentId.get(0) : 0L;
 
-            Long _parentId = Long.parseLong("0");
+            new SQLUpdateClause(conn, configuration, folders)
+                    .where(folders.parentId.eq(folderId))
+                    .set(folders.parentId, prntId)
+                    .execute();
 
-            try {
-                _parentId = parentId.get(0);
-            }
-            catch (Exception e) {
-                _parentId = Long.parseLong("0");
-            }
+            new SQLDeleteClause(conn, configuration, folders)
+                    .where(folders.id.eq(folderId))
+                    .execute();
 
-            new SQLUpdateClause(conn, configuration, folders).where(folders.parentId.eq(_folderId))
-                    .set(folders.parentId, _parentId).execute();
-
-            new SQLDeleteClause(conn, configuration, folders).where(folders.id.eq(_folderId)).execute();
-
-            new SQLUpdateClause(conn, configuration, folderMapMappings).where(folderMapMappings.folderId.eq(_folderId))
-                    .set(folderMapMappings.folderId, Long.parseLong("0")).execute();
+            new SQLUpdateClause(conn, configuration, folderMapMappings)
+                    .where(folderMapMappings.folderId.eq(folderId))
+                    .set(folderMapMappings.folderId, 0L)
+                    .execute();
         }
         catch (Exception e) {
             handleError(e, null, null);
         }
-        finally {
-            DbUtils.closeConnection(conn);
-        }
 
         JSONObject res = new JSONObject();
         res.put("success", true);
-        return Response.ok(res.toJSONString(), MediaType.APPLICATION_JSON).build();
+
+        return Response.ok(res.toJSONString()).build();
     }
 
     /**
@@ -930,37 +889,29 @@ public class MapResource {
      * @param newRecord
      *            ?
      * @return jobId Success = True/False
-     * @throws Exception
      */
     @POST
     @Path("/updateParentId")
     @Consumes(MediaType.TEXT_PLAIN)
-    @Produces(MediaType.TEXT_PLAIN)
-    public Response updateParentId(@QueryParam("folderId") String folderId,
-                                   @QueryParam("parentId") String parentId,
-                                   @QueryParam("newRecord") Boolean newRecord)
-            throws Exception {
-        Long _folderId = Long.parseLong(folderId);
-        Long _parentId = Long.parseLong(parentId);
-        Connection conn = DbUtils.createConnection();
+    @Produces(MediaType.APPLICATION_JSON)
+    public Response updateParentId(@QueryParam("folderId") Long folderId,
+                                   @QueryParam("parentId") Long parentId,
+                                   @QueryParam("newRecord") Boolean newRecord) {
 
-        QFolders folders = QFolders.folders;
-        Configuration configuration = DbUtils.getConfiguration();
-
-        try {
-            new SQLUpdateClause(conn, configuration, folders).where(folders.id.eq(_folderId))
-                    .set(folders.parentId, _parentId).execute();
+        try (Connection conn = DbUtils.createConnection()) {
+            new SQLUpdateClause(conn, DbUtils.getConfiguration(), folders)
+                    .where(folders.id.eq(folderId))
+                    .set(folders.parentId, parentId)
+                    .execute();
         }
         catch (Exception e) {
             handleError(e, null, null);
         }
-        finally {
-            DbUtils.closeConnection(conn);
-        }
 
         JSONObject res = new JSONObject();
         res.put("success", true);
-        return Response.ok(res.toJSONString(), MediaType.APPLICATION_JSON).build();
+
+        return Response.ok(res.toJSONString()).build();
     }
 
     /**
@@ -975,135 +926,110 @@ public class MapResource {
      *            new: creates new link; update: updates link delete: deletes
      *            link
      * @return jobId Success = True/False
-     * @throws Exception
      */
     @POST
     @Path("/linkMapFolder")
     @Consumes(MediaType.TEXT_PLAIN)
-    @Produces(MediaType.TEXT_PLAIN)
-    public Response updateFolderMapLink(@QueryParam("folderId") String folderId,
-                                        @QueryParam("mapId") String mapId,
-                                        @QueryParam("updateType") String updateType)
-            throws Exception {
-        Long _folderId = Long.parseLong(folderId);
-        Long _mapId = Long.parseLong(mapId);
-        Long newId = -1L;
-        NumberExpression<Long> expression = NumberTemplate.create(Long.class, "nextval('folder_map_mappings_id_seq')");
-        Connection conn = DbUtils.createConnection();
+    @Produces(MediaType.APPLICATION_JSON)
+    public Response updateFolderMapLink(@QueryParam("folderId") Long folderId,
+                                        @QueryParam("mapId") Long mapId,
+                                        @QueryParam("updateType") String updateType) {
+        try (Connection conn = DbUtils.createConnection()) {
+            Configuration configuration = DbUtils.getConfiguration();
 
-        QFolderMapMappings folderMapMappings = QFolderMapMappings.folderMapMappings;
-        Configuration configuration = DbUtils.getConfiguration();
-        SQLQuery query = new SQLQuery(conn, configuration);
-
-        /*
-         * long _mapId = 0;
-         *
-         * try { _mapId = ModelDaoUtils.getRecordIdForInputString(mapId, conn,
-         * maps, maps.id, maps.displayName); } catch (Exception e){ _mapId = 0;
-         * }
-         */
-
-        try {
             // Delete any existing to avoid duplicate entries
-            new SQLDeleteClause(conn, configuration, folderMapMappings).where(
-                    folderMapMappings.mapId.eq(Long.parseLong(mapId))).execute();
+            new SQLDeleteClause(conn, configuration, folderMapMappings)
+                    .where(folderMapMappings.mapId.eq(mapId))
+                    .execute();
 
             if (updateType.equalsIgnoreCase("new") || updateType.equalsIgnoreCase("update")) {
-                List<Long> ids = query.from().list(expression);
+                List<Long> ids = new SQLQuery<>(conn, configuration)
+                        .select(Expressions.numberTemplate(Long.class, "nextval('folder_map_mappings_id_seq')"))
+                        .from()
+                        .fetch();
 
                 if ((ids != null) && (!ids.isEmpty())) {
-                    newId = ids.get(0);
+                    Long newId = ids.get(0);
 
                     new SQLInsertClause(conn, configuration, folderMapMappings)
                             .columns(folderMapMappings.id, folderMapMappings.mapId, folderMapMappings.folderId)
-                            .values(newId, _mapId, _folderId).execute();
+                            .values(newId, mapId, folderId).execute();
                 }
             }
         }
         catch (Exception e) {
             handleError(e, null, null);
         }
-        finally {
-            DbUtils.closeConnection(conn);
-        }
 
         JSONObject res = new JSONObject();
         res.put("success", true);
-        return Response.ok(res.toJSONString(), MediaType.APPLICATION_JSON).build();
+
+        return Response.ok(res.toJSONString()).build();
     }
 
-    public String updateTagsDirect(java.util.Map<String, String> tags, String mapName) throws Exception {
+    public String updateTagsDirect(java.util.Map<String, String> tags, String mapName) throws SQLException {
         // _zoomLevels
-        Connection conn = DbUtils.createConnection();
-
         String jobId = UUID.randomUUID().toString();
 
-        JobStatusManager jobStatusManager = null;
-        try {
-            // Currently we do not have any way to get map id directly from hoot
-            // core command when it runs so for now we need get the all the map ids matching name and pick
-            // first one..
-            // THIS WILL NEED TO CHANGE when we implement handle map by Id
-            // instead of name..
+        try (Connection conn = DbUtils.createConnection()) {
+            JobStatusManager jobStatusManager = null;
+            try {
+                // Currently we do not have any way to get map id directly from hoot
+                // core command when it runs so for now we need get the all the map ids matching name and pick
+                // first one..
+                // THIS WILL NEED TO CHANGE when we implement handle map by Id
+                // instead of name..
 
-            List<Long> mapIds = DbUtils.getMapIdsByName(conn, mapName);
-            if (!mapIds.isEmpty()) {
-                // we are expecting the last one of duplicate name to be the one
-                // resulted from the conflation
-                // This can be wrong if there is race condition. REMOVE THIS
-                // once core
-                // implement map Id return
-                long mapId = mapIds.get(mapIds.size() - 1);
-                jobStatusManager = new JobStatusManager(conn);
-                jobStatusManager.addJob(jobId);
+                List<Long> mapIds = DbUtils.getMapIdsByName(conn, mapName);
+                if (!mapIds.isEmpty()) {
+                    // we are expecting the last one of duplicate name to be the one
+                    // resulted from the conflation
+                    // This can be wrong if there is race condition. REMOVE THIS
+                    // once core
+                    // implement map Id return
+                    long mapId = mapIds.get(mapIds.size() - 1);
+                    jobStatusManager = new JobStatusManager(conn);
+                    jobStatusManager.addJob(jobId);
 
-                // Hack alert!
-                // Add special handling of stats tag key
-                // We need to read the file in here, because the file doesn't
-                // exist at the time
-                // the updateMapsTagsCommand job is created in
-                // ConflationResource.java
-                String statsKey = "stats";
-                if (tags.containsKey(statsKey)) {
-                    String statsName = tags.get(statsKey).toString();
-                    File statsFile = new File(statsName);
-                    if (statsFile.exists()) {
-                        logger.debug("Found {}", statsName);
-                        String stats = FileUtils.readFileToString(statsFile, "UTF-8");
-                        tags.put(statsKey, stats);
+                    // Hack alert!
+                    // Add special handling of stats tag key
+                    // We need to read the file in here, because the file doesn't
+                    // exist at the time
+                    // the updateMapsTagsCommand job is created in
+                    // ConflationResource.java
+                    String statsKey = "stats";
+                    if (tags.containsKey(statsKey)) {
+                        String statsName = tags.get(statsKey);
+                        File statsFile = new File(statsName);
+                        if (statsFile.exists()) {
+                            logger.debug("Found {}", statsName);
+                            String stats = FileUtils.readFileToString(statsFile, "UTF-8");
+                            tags.put(statsKey, stats);
 
-                        if (!statsFile.delete()) {
-                            logger.error("Error deleting {} file", statsFile.getAbsolutePath());
+                            if (!statsFile.delete()) {
+                                logger.error("Error deleting {} file", statsFile.getAbsolutePath());
+                            }
+                        }
+                        else {
+                            logger.error("Can't find {}", statsName);
+                            tags.remove(statsKey);
                         }
                     }
-                    else {
-                        logger.error("Can't find {}", statsName);
-                        tags.remove(statsKey);
-                    }
+
+                    DbUtils.updateMapsTableTags(tags, mapId, conn);
+                    jobStatusManager.setComplete(jobId);
+                }
+            }
+            catch (Exception ex) {
+                if (jobStatusManager != null) {
+                    jobStatusManager.setFailed(jobId, ex.getMessage());
                 }
 
-                DbUtils.updateMapsTableTags(tags, mapId, conn);
-                jobStatusManager.setComplete(jobId);
+                String msg = "Failure update map tags resource" + ex.getMessage();
+                throw new WebApplicationException(ex, Response.serverError().entity(msg).build());
             }
+        }
 
-        }
-        catch (SQLException sqlEx) {
-            if (jobStatusManager != null) {
-                jobStatusManager.setFailed(jobId, sqlEx.getMessage());
-            }
-            ResourceErrorHandler.handleError("Failure update map tags resource " + sqlEx.getMessage() + " SQLState: "
-                    + sqlEx.getSQLState(), Status.INTERNAL_SERVER_ERROR, logger);
-        }
-        catch (Exception ex) {
-            if (jobStatusManager != null) {
-                jobStatusManager.setFailed(jobId, ex.getMessage());
-            }
-            ResourceErrorHandler.handleError("Failure update map tags resource" + ex.getMessage(),
-                    Status.INTERNAL_SERVER_ERROR, logger);
-        }
-        finally {
-            DbUtils.closeConnection(conn);
-        }
         return jobId;
     }
 
@@ -1111,26 +1037,22 @@ public class MapResource {
     @Path("/tags")
     @Consumes(MediaType.TEXT_PLAIN)
     @Produces(MediaType.APPLICATION_JSON)
-    public Response getTags(@QueryParam("mapid") String mapId) throws Exception {
-        Connection conn = DbUtils.createConnection();
+    public Response getTags(@QueryParam("mapid") String mapId) {
         JSONObject ret = new JSONObject();
-        try {
-            // log.debug(mapId);
-
+        try (Connection conn = DbUtils.createConnection()) {
             if (!StringUtils.isEmpty(mapId)) {
                 long mapIdNum = -2;
                 try {
                     mapIdNum = Long.parseLong(mapId);
                 }
-                catch (NumberFormatException e) {
+                catch (NumberFormatException ignored) {
                     // a map name string could also be passed in here
                 }
+
                 if (mapIdNum != -1) // not OSM API db
                 {
-                    QMaps maps = QMaps.maps;
                     mapIdNum = ModelDaoUtils.getRecordIdForInputString(mapId, conn, maps, maps.id, maps.displayName);
                     logger.info("Retrieving map tags for map with ID: {} ...", mapIdNum);
-                    assert (mapIdNum > 0);
 
                     try {
                         java.util.Map<String, String> tags = DbUtils.getMapsTableTags(mapIdNum, conn);
@@ -1140,18 +1062,18 @@ public class MapResource {
                         ret.putAll(tags);
                         Object oInput1 = ret.get("input1");
                         if (oInput1 != null) {
-                            String dispName = DbUtils.getDisplayNameById(conn, new Long(oInput1.toString()));
+                            String dispName = DbUtils.getDisplayNameById(conn, Long.valueOf(oInput1.toString()));
                             ret.put("input1Name", dispName);
                         }
 
                         Object oInput2 = ret.get("input2");
                         if (oInput2 != null) {
-                            String dispName = DbUtils.getDisplayNameById(conn, new Long(oInput2.toString()));
+                            String dispName = DbUtils.getDisplayNameById(conn, Long.valueOf(oInput2.toString()));
                             ret.put("input2Name", dispName);
                         }
                     }
                     catch (Exception e) {
-                        throw new Exception("Error getting map tags. :" + e.getMessage());
+                        throw new RuntimeException("Error getting map tags. :" + e.getMessage(), e);
                     }
                 }
             }
@@ -1159,34 +1081,153 @@ public class MapResource {
         catch (Exception e) {
             handleError(e, mapId, "");
         }
-        finally {
-            DbUtils.closeConnection(conn);
-        }
 
-        return Response.ok(ret.toString(), MediaType.APPLICATION_JSON).build();
+        return Response.ok(ret.toString()).build();
     }
 
     public static long validateMap(String mapId, Connection conn) {
-        long mapIdNum = -1;
+        long mapIdNum;
+
         try {
             // input mapId may be a map ID or a map name
             mapIdNum = ModelDaoUtils.getRecordIdForInputString(mapId, conn, maps, maps.id, maps.displayName);
-            assert (mapIdNum != -1);
         }
-        catch (Exception e) {
-            if (e.getMessage().startsWith("Multiple records exist")) {
-                ResourceErrorHandler
-                        .handleError(e.getMessage().replaceAll("records", "maps").replaceAll("record", "map"),
-                                Status.NOT_FOUND, logger);
+        catch (Exception ex) {
+            if (ex.getMessage().startsWith("Multiple records exist") || ex.getMessage().startsWith("No record exists")) {
+                String msg = ex.getMessage().replaceAll("records", "maps").replaceAll("record", "map");
+                throw new WebApplicationException(ex, Response.status(Status.NOT_FOUND).entity(msg).build());
             }
-            else if (e.getMessage().startsWith("No record exists")) {
-                ResourceErrorHandler
-                        .handleError(e.getMessage().replaceAll("records", "maps").replaceAll("record", "map"),
-                                Status.NOT_FOUND, logger);
+            else {
+                String msg = "Error requesting map with ID: " + mapId + " (" + ex.getMessage() + ")";
+                throw new WebApplicationException(ex, Response.status(Status.BAD_REQUEST).entity(msg).build());
             }
-            ResourceErrorHandler.handleError("Error requesting map with ID: " + mapId + " (" + e.getMessage() + ")",
-                    Status.BAD_REQUEST, logger);
         }
+
         return mapIdNum;
+    }
+
+    /**
+     * Writes a map query response with no element data
+     *
+     * @return a XML document response
+     */
+    private static Document writeEmptyResponse() {
+        Document responseDoc = null;
+        try {
+            responseDoc = XmlDocumentBuilder.create();
+        }
+        catch (ParserConfigurationException e) {
+            throw new RuntimeException("Error creating XmlDocumentBuilder!", e);
+        }
+
+        Element elementRootXml = OsmResponseHeaderGenerator.getOsmDataHeader(responseDoc);
+        responseDoc.appendChild(elementRootXml);
+        return responseDoc;
+    }
+
+    /**
+     * Writes the query response to an XML document
+     *
+     * @param results
+     *            query results; a mapping of element IDs to records, grouped by
+     *            element type
+     * @param queryBounds
+     *            bounds of the query
+     * @param multiLayerUniqueElementIds
+     *            if true, IDs are prepended with <map id>_<first letter of the
+     *            element type>_; this setting activated is not compatible with
+     *            standard OSM clients (specific to Hootenanny iD)
+     * @return an XML document
+     */
+    private static Document writeResponse(java.util.Map<ElementType, java.util.Map<Long, Tuple>> results,
+            BoundingBox queryBounds, boolean multiLayerUniqueElementIds, long mapId, Connection connection) {
+        Document responseDoc = null;
+        try {
+            responseDoc = XmlDocumentBuilder.create();
+        }
+        catch (ParserConfigurationException e) {
+            throw new RuntimeException("Error creating XmlDocumentBuilder!", e);
+        }
+
+        Element elementRootXml = OsmResponseHeaderGenerator.getOsmDataHeader(responseDoc);
+        responseDoc.appendChild(elementRootXml);
+
+        if (!results.isEmpty()) {
+            elementRootXml.appendChild(queryBounds.toXml(elementRootXml));
+
+            for (ElementType elementType : ElementType.values()) {
+                if (elementType != ElementType.Changeset) {
+                    java.util.Map<Long, Tuple> resultsForType = results.get(elementType);
+                    if (resultsForType != null) {
+                        for (java.util.Map.Entry<Long, Tuple> entry : resultsForType.entrySet()) {
+                            Tuple record = entry.getValue();
+
+                            hoot.services.models.osm.Element element =
+                                    ElementFactory.create(elementType, record, connection, mapId);
+
+                            // the query that sent this in should have
+                            // already handled filtering out invisible elements
+
+                            Users usersTable = record.get(QUsers.users);
+                            Element elementXml = element.toXml(elementRootXml, usersTable.getId(),
+                                    usersTable.getDisplayName(), multiLayerUniqueElementIds, true);
+                            elementRootXml.appendChild(elementXml);
+                        }
+                    }
+                }
+            }
+        }
+
+        return responseDoc;
+    }
+
+    /**
+     * Converts a set of folder database records into an object returnable by a
+     * web service
+     *
+     * @param folderRecordSet
+     *            set of map layer records
+     * @return folders web service object
+     */
+    private static FolderRecords mapFolderRecordsToFolders(List<Folders> folderRecordSet) {
+        FolderRecords folderRecords = new FolderRecords();
+        List<FolderRecord> folderRecordList = new ArrayList<>();
+
+        for (Folders folderRecord : folderRecordSet) {
+            FolderRecord folder = new FolderRecord();
+            folder.setId(folderRecord.getId());
+            folder.setName(folderRecord.getDisplayName());
+            folder.setParentId(folderRecord.getParentId());
+            folderRecordList.add(folder);
+        }
+
+        folderRecords.setFolders(folderRecordList.toArray(new FolderRecord[folderRecordList.size()]));
+
+        return folderRecords;
+    }
+
+    /**
+     * Converts a set of database records into an object returnable by a web
+     * service
+     *
+     * @param linkRecordSet
+     *            set of map layer records
+     * @return folders web service object
+     */
+    private static LinkRecords mapLinkRecordsToLinks(List<FolderMapMappings> linkRecordSet) {
+        LinkRecords linkRecords = new LinkRecords();
+        List<LinkRecord> linkRecordList = new ArrayList<>();
+
+        for (FolderMapMappings linkRecord : linkRecordSet) {
+            LinkRecord link = new LinkRecord();
+            link.setId(linkRecord.getId());
+            link.setFolderId(linkRecord.getFolderId());
+            link.setMapId(linkRecord.getMapId());
+            linkRecordList.add(link);
+        }
+
+        linkRecords.setLinks(linkRecordList.toArray(new LinkRecord[linkRecordList.size()]));
+
+        return linkRecords;
     }
 }
